user_group_popover: Fix misaligned icons in user group member list.
Previously, due the uneven width between the icons and the user
presence indicator, the icons and presence indicator were misaligned
with each other.

This commit uses the grid and subgrid layout systems to fix this
misalignment issue.

--- a/web/styles/app_variables.css
+++ b/web/styles/app_variables.css
@@ -468,6 +468,12 @@
     }
 
     /*
+    User group info popover elements and values.
+    */
+    --user-group-popover-horizontal-padding: 0.6666em; /* 10px at 15px/1em */
+    --user-group-popover-icon-text-gap: 0.3125em; /* 5px at 16px/1em */
+
+    /*
     Width to be reserved for document scrollbar when scrolling is disabled.
     Using `scrollbar-gutter` would be more appropriate but doesn't has wide
     support and doesn't work for `fixed` elements.
